--- a/demo/package.json
+++ b/demo/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "clsx": "^2.1.1",
     "next": "15.2.4",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-color-invert":"workspace:*"
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
+    "tailwind-color-invert": "workspace:*"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
