docs: :memo: highlight code with dark/light

--- a/biome.json
+++ b/biome.json
@@ -24,6 +24,9 @@
 				"useConst":"info",
 				"noUnusedTemplateLiteral":"off",
 				"useSelfClosingElements":"off"
+			},
+			"a11y":{
+				"noSvgWithoutTitle":"off"
 			}
 		}
 	},
