--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,6 +1,7 @@
-# Sample workflow for building and deploying a Next.js site to GitHub Pages
+# Sample workflow for building and deploying an Astro site to GitHub Pages
 #
-# To get started with Next.js see: https://nextjs.org/docs/getting-started
+# deploy github pages action see:  https://github.com/actions/starter-workflows/blob/main/pages/astro.yml
+# monorepo 从构建到发布 参考： https://juejin.cn/post/7210310775276716092
 #
 name: Deploy Next.js site to Pages
 
@@ -24,78 +25,55 @@ concurrency:
   group: "pages"
   cancel-in-progress: false
 
-jobs:
-  # Build job
-  build:
-    runs-on: ubuntu-latest
-    defaults:
-        run:
-          working-directory: demo # 替换为你的子项目路径
+env:
+  # BUILD_PATH: "." # default value when not using subfolders
+  BUILD_PATH: demo
   
+jobs:
+  build:
+    name: Build
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Detect package manager
-        id: detect-package-manager
-        run: |
-          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
-            echo "manager=yarn" >> $GITHUB_OUTPUT
-            echo "command=install" >> $GITHUB_OUTPUT
-            echo "runner=yarn" >> $GITHUB_OUTPUT
-            exit 0
-          elif [ -f "${{ github.workspace }}/package.json" ]; then
-            echo "manager=npm" >> $GITHUB_OUTPUT
-            echo "command=ci" >> $GITHUB_OUTPUT
-            echo "runner=npx --no-install" >> $GITHUB_OUTPUT
-            exit 0
-          elif [ -f "${{ github.workspace }}/pnpm-lock.yaml" ]; then
-             echo "manager=pnpm" >> $GITHUB_OUTPUT
-            echo "command=install" >> $GITHUB_OUTPUT
-            echo "runner=pnpm" >> $GITHUB_OUTPUT
-            exit 0
-          else
-            echo "Unable to determine package manager"
-            exit 1
-          fi
-      - name: Setup Node
+
+      - name: Install Node.js
         uses: actions/setup-node@v4
-        with:
+        with: 
           node-version: "20"
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4 
+      #version: 9.4.0 defined in package.json 
+
       - name: Setup Pages
+        id: pages
         uses: actions/configure-pages@v5
         with:
-          # Automatically inject basePath in your Next.js configuration file and disable
-          # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
-          #
-          # You may remove this line if you want to manage the configuration yourself.
-          static_site_generator: next
-      - name: Restore cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            .next/cache
-          # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          # If source files changed but packages didn't, rebuild from a prior cache.
-          restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
+            # Automatically inject basePath in your Next.js configuration file and disable
+            # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
+            #
+            # You may remove this line if you want to manage the configuration yourself.
+            static_site_generator: next
+
       - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
-      - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build
+        run: pnpm install
+      
+      - name: Build with nextjs
+        run: pnpm build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./out
+          path: ${{ env.BUILD_PATH }}/out
 
-  # Deployment job
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
+      url: ${{ steps.deployment.outputs.page_url }} #BASE_URL记得设置为项目名
     needs: build
+    runs-on: ubuntu-latest
+    name: Deploy
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
